--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400&display=swap');
 
+
 *,*:before, *:after {
     margin:0;
     padding:0;
@@ -39,7 +40,7 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
+.home_sreekar {
     font-family: var(--primary-font);
     font-size: 100%;
     font-weight: 400;
@@ -55,14 +56,14 @@ body {
     background: var(--primary-color);
 }
 
-h1 {
+.hech1_sreekar {
     font-size: 3rem;
     font-weight: 900;
     margin-bottom: 3rem;
     color: var(--secondary-color);
 
 }
-h2 {
+.hech2_sreekar {
     font-weight: 700;
     font-size: 2.25rem;
     font-family: var(--secondary-font);
@@ -70,7 +71,7 @@ h2 {
     line-height: 3rem;
 }
 
-h4 {
+.hech4_sreekar {
     color: var(--secondary-color);
     font-family: var(--secondary-font);
     text-transform: capitalize;
@@ -79,7 +80,7 @@ h4 {
     margin-bottom: 0.5rem;
 }
 
-h5 {
+.hech5_sreekar {
     color: var(--primary-color);
     text-transform: capitalize;
     font-family: var(--secondary-font);
@@ -88,7 +89,7 @@ h5 {
     margin-bottom: 0.5rem;
 }
 
-p {
+.pee_sreekar {
     font-size: 1rem;
     color: var(--text-color);
     font-weight: 400;
