--- a/src/components/Upload/Upload.css
+++ b/src/components/Upload/Upload.css
@@ -9,7 +9,7 @@
     margin-left: 60px;
 }
 
-.card {
+.card1 {
     border-radius: 5px;
     -webkit-box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
     box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
