--- a/src/components/Blogs/Blogs.css
+++ b/src/components/Blogs/Blogs.css
@@ -92,6 +92,6 @@ background: linear-gradient(34deg, rgba(49,54,152,1) 0%, rgba(18,115,184,1) 49%,
     
   }
 
-a_sreekar {
+.a_sreekar {
     text-decoration: none;
 }
